--- a/app/src/main/res/layout/some_list_item.xml
+++ b/app/src/main/res/layout/some_list_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="64dp"
         android:orientation="horizontal">
 
         <EditText
@@ -16,8 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:ems="5"
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:selectAllOnFocus="true" />
 
@@ -52,6 +53,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:selectAllOnFocus="true"
             app:layout_constraintBottom_toBottomOf="parent"
